API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

15-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	zText compess driver working
	Fixed ZipCompress
	Optimized SWCompress
	mod2zmod conversion utility working
	Added support for zText modules in SWMgr with 2 new
		parameters: BlockType=[VERSE|CHAPTER|BOOK]
		CompressType=[LZSS|ZIP]

10-Dec-2000     Chris Little <chrislit@crosswire.org>
	Added addld utility for adding single entries to LD modules
	
09-Dec-2000     Chris Little <chrislit@crosswire.org>
        Added addvs utility for adding single verses to modules
	Added Diatheke (and CGI/Tcl/PQA frontends to it) to source
	        tree
	ThML filters (all) fixed to support longer tag lengths and
	        decode HTML ampersand codes (e.g. &nbsp;)
	ThMLRTF filter fixed to avoid printing extra '>'s

02-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added write support for RawLD
	Added new utility modwrite to call a write interface

30-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Fixed memory leak in write methods of RawText
	Added some initial support for writing to zText
	Added a 'not working yet' mod2zmod utility


20-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, step2vpl, for dumping BSISG STEP module in
		vpl format.
	Added new make target: install_config to put a basic install on
		a box.
	Added a QUICKSTART section to INSTALL file

17-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility, stepdump, for dumping BSISG STEP modules.

11-Nov-2000	Joachim Ansorg <jansorg@crosswire.org>
	Commited new version of the sk locale file.


* Release 1.5.1a *


06-Nov-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added more debug for tests/mgrtest.cpp
	Hardcoded VerseKey::NewIndex to KJV max index

01-Nov-2000	Joachim Ansorg <jansorg@crosswire.org> 
	Added test program for indexes using VerseKey::NewIndex()

31-Oct-2000	Joachim Ansorg <jansorg@crosswire.org>