@@ -19,6 +19,7 @@ legalexport := yes
 
 # compiler
 
+CROSS_COMPILE = 
 CC         = gcc
 need_local_regex := no
 
@@ -44,6 +45,7 @@ profile := no
 system := intel
 #system := sparc
 #system := macosx
+#system := arm
 
 ## MAC OSX Support works but possible bug exists in /usr/include/sys/dirent.h
 ## on the current version (B) of OSX.  You will need to add this line right after the #ifdef of DIRENT
@@ -117,6 +119,10 @@ ifeq ($(system),macosx)
 CFLAGS   += -DBIGENDIAN -DMACOSX
 endif
 
+ifeq ($(system),arm)
+CROSS_COMPILE = arm-linux-
+endif
+
 ifeq ($(system),sparc)
 CFLAGS   += -DBIGENDIAN
 endif
@@ -155,28 +161,28 @@ default: all
 ifeq (${buildshare},yes)
 ifneq (${bin},)
 %.o: %.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
 %.o: %.cpp
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
 else
 %.o: %.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
-	$(CC) $(CPPFLAGS) -fpic -shared $(CFLAGS) -c -o `basename $@ .o`.so $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) -fpic -shared $(CFLAGS) -c -o `basename $@ .o`.so $<
 	mv `basename $@ .o`.so ${objdir}
 %.o: %.cpp
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
-	$(CC) $(CPPFLAGS) -fpic -shared $(CFLAGS) -c -o `basename $@ .o`.so $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) -fpic -shared $(CFLAGS) -c -o `basename $@ .o`.so $<
 	mv `basename $@ .o`.so ${objdir}
 endif
 else
 %.o: %.c
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
 %.o: %.cpp
-	$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
 endif
 
 %: %.cpp
-	$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ $< $(LDFLAGS)
+	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -o $@ $< $(LDFLAGS)
 
 ifeq (${clean-targets},)
 clean-targets = ${targets}
@@ -185,7 +191,7 @@ endif
 # Rules to generate dependancies
 
 define run-depend
-$(SHELL) -ec '$(CC) -MM -MG $(CPPFLAGS) $< | sed '\''s/$*\.o/& $@/g'\'' > $@'
+$(SHELL) -ec '$(CROSS_COMPILE)$(CC) -MM -MG $(CPPFLAGS) $< | sed '\''s/$*\.o/& $@/g'\'' > $@'
 endef
 
 %.d: %.c
