@@ -1,6 +1,12 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+20-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
+    Added new compile target architecture: arm
+    Changed the simple lookup cmdline example to work with any
+        module.  Tested on iPaq SA1110.  Need to optimize
+        size/speed!
+
 15-Dec-2000	Troy A. Griffitts <scribe@crosswire.org>
 	zText compess driver working
 	Fixed ZipCompress
